--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
-    "format": "prettier --trailing-comma es5 --no-semi --single-quote --write \"src/**/*.js\""
+    "format": "prettier --trailing-comma es5 --no-semi --single-quote --write \"src/**/*.js\"",
+    "clean": "gatsby clean"
   },
   "devDependencies": {
     "prettier": "^1.17.0"
